--- a/styles.css
+++ b/styles.css
@@ -153,11 +153,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-.contact-links {
-  display: flex;
-  gap: 20px;
-  margin-top: 20px;
-}
 
 .contact-links a {
   display: flex;
@@ -177,6 +172,17 @@ a:hover {
 
 .contact-links i {
   font-size: 18px;
+}
+
+.contact-links {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#contact {
+  text-align: center;      
 }
 
 /* NAVBAR */
