--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,14 @@ ul li {
 
 
 /* PROJECT GRID */
+.badge {
+  display: inline-block;
+  font-size: 0.85rem;
+  font-weight: 600;
+  color: #7c3aed;
+  margin-bottom: 6px;
+}
+
 
 .project-grid {
   display: grid;
@@ -143,6 +151,13 @@ ul li {
   margin-top: 5px;
 }
 
+.project-links {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+
 /* CONTACT LINKS */
 
 a {
@@ -163,11 +178,14 @@ a:hover {
   border-radius: 8px;
   transition: 0.3s;
   font-weight: 500;
+  color: inherit;
+  transition: transform 0.2s ease;
 }
 
 .contact-links a:hover {
   background: #38bdf8;
   color: black;
+  transform: scale(1.2);
 }
 
 .contact-links i {
@@ -176,10 +194,11 @@ a:hover {
 
 .contact-links {
   display: flex;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 25px;
+  margin-top: 15px;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: wrap;font-size: 1.8rem;
+  
 }
 #contact {
   text-align: center;      
